@@ -1,9 +1,11 @@
 package ir.sudoit.infrastructure.crud.service;
 
+import ir.sudoit.core.crud.exception.NotFoundException;
 import ir.sudoit.core.crud.model.IdentifiableModel;
 import ir.sudoit.core.crud.port.dto.CrudRequest;
 import ir.sudoit.core.crud.port.dto.CrudResponse;
 import ir.sudoit.core.crud.port.out.CrudService;
+import ir.sudoit.core.crud.utility.PropertiesConfig;
 import ir.sudoit.infrastructure.crud.persistence.mapper.CrudMapper;
 import ir.sudoit.infrastructure.crud.persistence.model.EntityEvent;
 import ir.sudoit.infrastructure.crud.persistence.repositories.CrudRepo;
@@ -12,18 +14,25 @@ import org.springframework.context.ApplicationEventPublisher;
 import org.springframework.lang.NonNull;
 import org.springframework.transaction.annotation.Transactional;
 
+import javax.persistence.EntityNotFoundException;
 import java.io.Serializable;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import static ir.sudoit.infrastructure.crud.utility.CrudUtils.copyNonNullProperties;
+
 @Transactional
 public abstract class AbstractCrudService<T extends IdentifiableModel<ID>, ID extends Serializable, Q extends CrudRequest, S extends CrudResponse> implements CrudService<T, ID, Q, S> {
 
     protected final CrudRepo<T, ID> repo;
     protected final CrudMapper<T, ID, Q, S> mapper;
 
+    private static final String NOT_FOUND_CODE = "not_found_error_code";
+    private static final String NOT_FOUND_MESSAGE = "not_found_error_message";
+
+
+    @Autowired
+    protected PropertiesConfig propertiesConfig;
     @Autowired
     protected ApplicationEventPublisher publisher;
 
@@ -58,22 +67,24 @@ public abstract class AbstractCrudService<T extends IdentifiableModel<ID>, ID ex
 
     @NonNull
     @Override
-    public Optional<T> update(final ID id, final T source) {
+    public T update(final ID id, final T source) {
         return repo.update(id, source, (s, t) -> copyNonNullProperties(s, t, ignoredProps())).map(entity -> {
             EntityEvent<T, ID> event = onUpdateEvent(entity);
             if (event != null) publisher.publishEvent(event);
             return entity;
-        });
+        }).orElseThrow(() -> new NotFoundException(propertiesConfig.getResult(NOT_FOUND_CODE),
+                propertiesConfig.getResult(NOT_FOUND_MESSAGE)));
     }
 
     @NonNull
     @Override
-    public Optional<S> update(final ID id, final Q source) {
+    public S update(final ID id, final Q source) {
         return repo.update(id, source, new CallbackMapper<>(mapper::toUpdate, this::onUpdate)).map(entity -> {
             EntityEvent<T, ID> event = onUpdateEvent(entity);
             if (event != null) publisher.publishEvent(event);
             return mapper.toResponse(entity);
-        });
+        }).orElseThrow(() -> new NotFoundException(propertiesConfig.getResult(NOT_FOUND_CODE),
+                propertiesConfig.getResult(NOT_FOUND_MESSAGE)));
     }
 
     @Override
@@ -90,13 +101,21 @@ public abstract class AbstractCrudService<T extends IdentifiableModel<ID>, ID ex
     @Override
     public Optional<T> getOneT(@NonNull final ID id) {
         return Optional.of(repo.getById(id));
+
     }
 
     @Transactional(readOnly = true)
     @NonNull
     @Override
-    public Optional<S> getOne(@NonNull final ID id) {
-        return getOneT(id).map(mapper::toResponse);
+    public S getOne(@NonNull final ID id) {
+        try {
+            return getOneT(id).map(mapper::toResponse)
+                    .orElseThrow(() -> new NotFoundException(propertiesConfig.getResult(NOT_FOUND_CODE),
+                            propertiesConfig.getResult(NOT_FOUND_MESSAGE)));
+        } catch (EntityNotFoundException e) {
+            throw new NotFoundException(propertiesConfig.getResult(NOT_FOUND_CODE),
+                    propertiesConfig.getResult(NOT_FOUND_MESSAGE));
+        }
     }
 
     @Transactional(readOnly = true)
@@ -110,9 +129,8 @@ public abstract class AbstractCrudService<T extends IdentifiableModel<ID>, ID ex
     @NonNull
     @Override
     public List<S> getAll() {
-        return repo.getAll().stream().map(mapper::toResponse).collect(Collectors.toList());
+        return repo.getAll().stream().map(mapper::toResponse).toList();
     }
-
 
 
     protected String[] ignoredProps() {
@@ -128,6 +146,7 @@ public abstract class AbstractCrudService<T extends IdentifiableModel<ID>, ID ex
     }
 
     protected EntityEvent<T, ID> onCreateEvent(@NonNull T entity) {
+        //TODO: You can create event
         return null;
     }
 
